fixed scrollbar, needing next phase

--- a/index.css
+++ b/index.css
@@ -176,7 +176,13 @@ nav > ol {
     font-size: 16px;
     line-height: 3vh;
     height: 30vh;
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
     overflow-y: auto;
+}
+
+#aboutme::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
 }
 
 #foot {
@@ -518,5 +524,11 @@ nav > ol {
     width: 50%;
     display: inline-block;
     height: 50vh;
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
     overflow-y: auto;
   }
+
+  #speeching::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
+}
